"More like this..." feature was implemented.

--- a/templates/practice/details.html
+++ b/templates/practice/details.html
@@ -3,140 +3,155 @@
 {% block title %}Review practice {{ practice.id }}{% endblock %}
 
 {% block content %}
-    <table class="table my-2">
-        <thead class="thead-light">
-            <tr>
-                <th scope="col" style="width: 10%">Field</th>
-                <th scope="col" style="width: 90%">Value</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <th scope="row">ID</th>
-                <td>{{ practice.id }}</td>
-            </tr>
-            <tr>
-                <th class="align-middle" scope="row">Status</th>
-                <th class="align-middle" scope="row">
-                    <div class="btn-toolbar justify-content-between">
-                        <h5 class="mt-1"><span class="mt-1 badge {{ "badge-" +  config.STATUS_BADGE_STYLE[practice.status] }}">{{ practice.status|capitalize }}</span></h5>
-                        <form action="{{ url_for("practice.action", id=practice.id, query=query, page=page) }}" method="post">
-                        {% for action in actions %}
-                            {% if "ACTION_" + action["action"] in g.permissions %}
-                                <input class="btn {{  config.ACTION_STYLE[action["action"]] }}" style="width: 90px;" name="action" type="submit" value="{{ action["action"]|capitalize }}"/>
-                            {% endif %}
+    <div class="row my-2">
+        <div class="col-9">
+            <table class="table">
+                <thead class="thead-light">
+                    <tr>
+                        <th scope="col" style="width: 10%">Field</th>
+                        <th scope="col" style="width: 90%">Value</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th scope="row">ID</th>
+                        <td>{{ practice.id }}</td>
+                    </tr>
+                    <tr>
+                        <th class="align-middle" scope="row">Status</th>
+                        <th class="align-middle" scope="row">
+                            <div class="btn-toolbar justify-content-between">
+                                <h5 class="mt-1"><span class="mt-1 badge {{ "badge-" +  config.STATUS_BADGE_STYLE[practice.status] }}">{{ practice.status|capitalize }}</span></h5>
+                                <form action="{{ url_for("practice.action", id=practice.id, query=query, page=page) }}" method="post">
+                                {% for action in actions %}
+                                    {% if "ACTION_" + action["action"] in g.permissions %}
+                                        <input class="btn {{  config.ACTION_STYLE[action["action"]] }}" style="width: 90px;" name="action" type="submit" value="{{ action["action"]|capitalize }}"/>
+                                    {% endif %}
+                                {% endfor %}
+                                </form>
+                            </div>
+                        </th>
+                    </tr>
+                    <tr>
+                        <th scope="row">Title</th>
+                        <td>{{ practice.title }}</td>
+                    </tr>
+                    <tr>
+                        <th scope="row" class="d-flex"><span {% if practice.intervention_name not in  master["INTERVENTION_NAMES"] %}class="flex-fill bg-warning" {% endif %}>Intervention name</span></th>
+                        <td>{{ practice.intervention_name }}</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">Summary</th>
+                        <td>{{ practice.summary }}</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">Link</th>
+                        <td><a style="word-break: break-all;" href="{{ practice.link }}">{{ practice.link }}</a></td>
+                    </tr>
+                    <tr>
+                        <th scope="row">Citation</th>
+                        <td>{{ practice.citation }}</td>
+                    </tr>
+                    <tr>
+                        <th scope="row" class="d-flex"><span {% if practice.program_success not in  master["PROGRAM_SUCCESSES"] %}class="flex-fill bg-warning" {% endif %}>Program success</span></th>
+                        <td>{{ practice.program_success }}</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">City</th>
+                        <td>{{ practice.city }}</td>
+                    </tr>
+                    <tr>
+                        <th scope="row" class="d-flex"><span {% if practice.geography | reject("in",  master["STATES"]) | first %}class="flex-fill bg-warning" {% endif %}>Geography</span></th>
+                        <td>
+                        {% for state in practice.geography %}
+                            <span class="badge {% if state in  master["STATES"] %}badge-info{% else %}badge-danger{% endif %}">{{ state }}</span>
                         {% endfor %}
-                        </form>
-                    </div>
-                </th>
-            </tr>
-            <tr>
-                <th scope="row">Title</th>
-                <td>{{ practice.title }}</td>
-            </tr>
-            <tr>
-                <th scope="row" class="d-flex"><span {% if practice.intervention_name not in  master["INTERVENTION_NAMES"] %}class="flex-fill bg-warning" {% endif %}>Intervention name</span></th>
-                <td>{{ practice.intervention_name }}</td>
-            </tr>
-            <tr>
-                <th scope="row">Summary</th>
-                <td>{{ practice.summary }}</td>
-            </tr>
-            <tr>
-                <th scope="row">Link</th>
-                <td><a href="{{ practice.link }}">{{ practice.link }}</a></td>
-            </tr>
-            <tr>
-                <th scope="row">Citation</th>
-                <td>{{ practice.citation }}</td>
-            </tr>
-            <tr>
-                <th scope="row" class="d-flex"><span {% if practice.program_success not in  master["PROGRAM_SUCCESSES"] %}class="flex-fill bg-warning" {% endif %}>Program success</span></th>
-                <td>{{ practice.program_success }}</td>
-            </tr>
-            <tr>
-                <th scope="row">City</th>
-                <td>{{ practice.city }}</td>
-            </tr>
-            <tr>
-                <th scope="row" class="d-flex"><span {% if practice.geography | reject("in",  master["STATES"]) | first %}class="flex-fill bg-warning" {% endif %}>Geography</span></th>
-                <td>
-                {% for state in practice.geography %}
-                    <span class="badge {% if state in  master["STATES"] %}badge-info{% else %}badge-danger{% endif %}">{{ state }}</span>
-                {% endfor %}
-                </td>
-            </tr>
-            <tr>
-                <th scope="row" class="d-flex"><span {% if practice.region | reject("in",  master["REGIONS"]) | first %}class="flex-fill bg-warning" {% endif %}>Region</span></th>
-                <td>
-                {% for region in practice.region %}
-                    <span class="badge {% if region in  master["REGIONS"] %}badge-info{% else %}badge-danger{% endif %}">{{ region }}</span>
-                {% endfor %}
-                </td>
-            </tr>
-            <tr>
-                <th scope="row" class="d-flex"><span {% if practice.source_type not in  master["SOURCE_TYPES"] %}class="flex-fill bg-warning" {% endif %}>Source type</span></th>
-                <td>{{ practice.source_type }}</td>
-            </tr>
-            <tr>
-                <th scope="row" class="d-flex"><span {% if practice.race | reject("in",  master["RACES"]) | first %}class="flex-fill bg-warning" {% endif %}>Race</span></th>
-                <td>
-                {% for race in practice.race %}
-                    <span class="badge {% if race in  master["RACES"] %}badge-info{% else %}badge-danger{% endif %}">{{ race }}</span>
-                {% endfor %}
-                </td>
-            </tr>
-            <tr>
-                <th scope="row" class="d-flex"><span {% if practice.intervention_goal | reject("in",  master["INTERVENTION_GOALS"]) | first %}class="flex-fill bg-warning" {% endif %}>Intervention goal</span></th>
-                <td>
-                {% for intervention_goal in practice.intervention_goal %}
-                    <span class="badge {% if intervention_goal in  master["INTERVENTION_GOALS"] %}badge-info{% else %}badge-danger{% endif %}">{{ intervention_goal }}</span>
-                {% endfor %}
-                </td>
-            </tr>
-            <tr>
-                <th scope="row" class="d-flex"><span {% if practice.implementers | reject("in",  master["IMPLEMENTERS"]) | first %}class="flex-fill bg-warning" {% endif %}>Implementers</span></th>
-                <td>
-                {% for implementer in practice.implementers %}
-                    <span class="badge {% if implementer in  master["IMPLEMENTERS"] %}badge-info{% else %}badge-danger{% endif %}">{{ implementer }}</span>
-                {% endfor %}
-                </td>
-            </tr>
-            <tr>
-                <th scope="row" class="d-flex"><span {% if practice.scale | reject("in",  master["SCALES"]) | first %}class="flex-fill bg-warning" {% endif %}>Scale</span></th>
-                <td>
-                {% for scale in practice.scale %}
-                    <span class="badge {% if scale in  master["SCALES"] %}badge-info{% else %}badge-danger{% endif %}">{{ scale }}</span>
-                {% endfor %}
-                </td>
-            </tr>
-            <tr>
-                <th scope="row" class="d-flex"><span {% if practice.country | reject("in",  master["COUNTRIES"]) | first %}class="flex-fill bg-warning" {% endif %}>Country</span></th>
-                <td>
-                {% for country in practice.country %}
-                    <span class="badge {% if country in  master["COUNTRIES"] %}badge-info{% else %}badge-danger{% endif %}">{{ country }}</span>
-                {% endfor %}
-                </td>
-            </tr>
-            <th scope="row" class="d-flex"><span {% if practice.program_components | reject("in",  master["PROGRAM_COMPONENTS"]) | first %}class="flex-fill bg-warning" {% endif %}>Program components</span></th>
-                <td>
-                {% for program_component in practice.program_components %}
-                    <span class="badge {% if program_component in  master["PROGRAM_COMPONENTS"] %}badge-info{% else %}badge-danger{% endif %}">{{ program_component }}</span>
-                {% endfor %}
-                </td>
-            </tr>
-            <tr>
-                <th scope="row" class="d-flex"><span {% if practice.population | reject("in",  master["POPULATIONS"]) | first %}class="flex-fill bg-warning" {% endif %}>Population</span></th>
-                <td>
-                {% for population in practice.population %}
-                    <span class="badge {% if population in  master["POPULATIONS"] %}badge-info{% else %}badge-danger{% endif %}">{{ population }}</span>
-                {% endfor %}
-                </td>
-            </tr>
-        </tbody>
-    </table>
+                        </td>
+                    </tr>
+                    <tr>
+                        <th scope="row" class="d-flex"><span {% if practice.region | reject("in",  master["REGIONS"]) | first %}class="flex-fill bg-warning" {% endif %}>Region</span></th>
+                        <td>
+                        {% for region in practice.region %}
+                            <span class="badge {% if region in  master["REGIONS"] %}badge-info{% else %}badge-danger{% endif %}">{{ region }}</span>
+                        {% endfor %}
+                        </td>
+                    </tr>
+                    <tr>
+                        <th scope="row" class="d-flex"><span {% if practice.source_type not in  master["SOURCE_TYPES"] %}class="flex-fill bg-warning" {% endif %}>Source type</span></th>
+                        <td>{{ practice.source_type }}</td>
+                    </tr>
+                    <tr>
+                        <th scope="row" class="d-flex"><span {% if practice.race | reject("in",  master["RACES"]) | first %}class="flex-fill bg-warning" {% endif %}>Race</span></th>
+                        <td>
+                        {% for race in practice.race %}
+                            <span class="badge {% if race in  master["RACES"] %}badge-info{% else %}badge-danger{% endif %}">{{ race }}</span>
+                        {% endfor %}
+                        </td>
+                    </tr>
+                    <tr>
+                        <th scope="row" class="d-flex"><span {% if practice.intervention_goal | reject("in",  master["INTERVENTION_GOALS"]) | first %}class="flex-fill bg-warning" {% endif %}>Intervention goal</span></th>
+                        <td>
+                        {% for intervention_goal in practice.intervention_goal %}
+                            <span class="badge {% if intervention_goal in  master["INTERVENTION_GOALS"] %}badge-info{% else %}badge-danger{% endif %}">{{ intervention_goal }}</span>
+                        {% endfor %}
+                        </td>
+                    </tr>
+                    <tr>
+                        <th scope="row" class="d-flex"><span {% if practice.implementers | reject("in",  master["IMPLEMENTERS"]) | first %}class="flex-fill bg-warning" {% endif %}>Implementers</span></th>
+                        <td>
+                        {% for implementer in practice.implementers %}
+                            <span class="badge {% if implementer in  master["IMPLEMENTERS"] %}badge-info{% else %}badge-danger{% endif %}">{{ implementer }}</span>
+                        {% endfor %}
+                        </td>
+                    </tr>
+                    <tr>
+                        <th scope="row" class="d-flex"><span {% if practice.scale | reject("in",  master["SCALES"]) | first %}class="flex-fill bg-warning" {% endif %}>Scale</span></th>
+                        <td>
+                        {% for scale in practice.scale %}
+                            <span class="badge {% if scale in  master["SCALES"] %}badge-info{% else %}badge-danger{% endif %}">{{ scale }}</span>
+                        {% endfor %}
+                        </td>
+                    </tr>
+                    <tr>
+                        <th scope="row" class="d-flex"><span {% if practice.country | reject("in",  master["COUNTRIES"]) | first %}class="flex-fill bg-warning" {% endif %}>Country</span></th>
+                        <td>
+                        {% for country in practice.country %}
+                            <span class="badge {% if country in  master["COUNTRIES"] %}badge-info{% else %}badge-danger{% endif %}">{{ country }}</span>
+                        {% endfor %}
+                        </td>
+                    </tr>
+                    <th scope="row" class="d-flex"><span {% if practice.program_components | reject("in",  master["PROGRAM_COMPONENTS"]) | first %}class="flex-fill bg-warning" {% endif %}>Program components</span></th>
+                        <td>
+                        {% for program_component in practice.program_components %}
+                            <span class="badge {% if program_component in  master["PROGRAM_COMPONENTS"] %}badge-info{% else %}badge-danger{% endif %}">{{ program_component }}</span>
+                        {% endfor %}
+                        </td>
+                    </tr>
+                    <tr>
+                        <th scope="row" class="d-flex"><span {% if practice.population | reject("in",  master["POPULATIONS"]) | first %}class="flex-fill bg-warning" {% endif %}>Population</span></th>
+                        <td>
+                        {% for population in practice.population %}
+                            <span class="badge {% if population in  master["POPULATIONS"] %}badge-info{% else %}badge-danger{% endif %}">{{ population }}</span>
+                        {% endfor %}
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+        <div class="col-3">
+            <div class="list-group">
+                <small class="list-group-item list-group-item-action flex-column align-items-start bg-secondary bg-light">More like this:</small>
+                {% for document in more_like_this %}
+                        <a class="list-group-item list-group-item-action flex-column align-items-start" href="{{ url_for('practice.details', id=document.id, page=page, query=query) }}">
+                            <p>{{ document.title }}</p>
+                            <small class="mt-1 badge {{ "badge-" +  config.STATUS_BADGE_STYLE[document.status] }}">{{ document.status|capitalize }}</small>
+                        </a>
+                {%  endfor %}
+            </div>
+        </div>
+    </div>
 
-    <hr class="my-4"/>
+    <hr class="my-4">
 
     <div class="mx-2">
         <h6>Changelog:</h6>
