Public summary added.

--- a/templates/practice/details.html
+++ b/templates/practice/details.html
@@ -45,6 +45,10 @@
                         <td>{{ practice.summary }}</td>
                     </tr>
                     <tr>
+                        <th scope="row">Public summary</th>
+                        <td>{{ practice.public_summary }}</td>
+                    </tr>
+                    <tr>
                         <th scope="row">Link</th>
                         <td><a style="word-break: break-all;" href="{{ practice.link }}">{{ practice.link }}</a></td>
                     </tr>
