--- a/templates/practice/edit.html
+++ b/templates/practice/edit.html
@@ -49,6 +49,12 @@
                     </td>
                 </tr>
                 <tr >
+                    <th scope="row">Public summary</th>
+                    <td>
+                        <textarea class="form-control" rows="5" name="public_summary">{{ practice.public_summary }}</textarea>
+                    </td>
+                </tr>
+                <tr >
                     <th scope="row">Link</th>
                     <td>
                         <input class="form-control" type="url" name="link" value="{{ practice.link }}">
