--- a/templates/practice/index.html
+++ b/templates/practice/index.html
@@ -31,21 +31,21 @@
     </table>
     <ul class="pagination justify-content-center">
         <li class="page-item {% if page <= 0 %}disabled{% endif %}">
-            <a class="page-link" href="/?page={{ page - 1 }}&query={{ query }}" tabindex="-1">Previous</a>
+            <a class="page-link" href="{{ url_for("practice.index", page=page-1, query=query) }}" tabindex="-1">Previous</a>
         </li>
         {% for p in pager %}
             {% if p is number %}
                 {% if p == page %}
                     <li class="page-item active"><a class="page-link"> {{ p + 1 }} </a></li>
                 {% else %}
-                    <li class="page-item "><a class="page-link" href="/?page={{ p }}&query={{ query }}"> {{ p + 1 }} </a></li>
+                    <li class="page-item "><a class="page-link" href="{{ url_for("practice.index", page=p, query=query) }}"> {{ p + 1 }} </a></li>
                 {% endif %}
             {% else %}
                 <li class="page-item disabled"><a class="page-link"> {{ p }} </a></li>
             {% endif %}
         {% endfor %}
         <li class="page-item {% if page >= pager[-1] %}disabled{% endif %}">
-            <a class="page-link" href="/?page={{ page + 1 }}&query={{ query }}">Next</a>
+            <a class="page-link" href="{{ url_for("practice.index", page=page+1, query=query) }}">Next</a>
         </li>
     </ul>
 {% endblock %}
