--- a/templates/base.html
+++ b/templates/base.html
@@ -64,6 +64,10 @@
                              <input type="file" id="uploadFile" name="file" accept="text/csv" onchange="this.form.submit();" style="display: none">
                          </form>
                     {% endif %}
+                    {% if "ADMIN_DEMOREQUESTS" in g.permissions %}
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="{{ url_for('demo.index') }}">Demo requests</a>
+                    {% endif %}
                     <div class="dropdown-divider"></div>
                     <a class="dropdown-item" href="{{ url_for('auth.password') }}">Password</a>
                     <a class="dropdown-item" href="{{ url_for('auth.logout') }}">Sign out</a>
