--- a/templates/demo/details.html
+++ b/templates/demo/details.html
@@ -3,7 +3,7 @@
 {% block title %}Demo request{% endblock %}
 
 {% block content %}
-    <div class="my-2">
+    <div class="my-2 {{ 'text-muted' if demo_request.was_deleted else ''}}">
         <table class="table">
             <thead class="thead-light">
                 <tr>
@@ -66,7 +66,28 @@
         <div class="d-inline" role="group">
             <a class="btn btn-secondary mr-2" style="width: 90px;" href="{{ url_for("demo.index") }}">Back</a>
         </div>
-        <a class="btn btn-outline-danger d-inline float-right" style="width: 90px;" href="">Delete</a>
+        <a class="btn btn-outline-danger d-inline float-right" style="width: 90px;" href="#" data-toggle="modal" data-target="#deleteModal">Delete</a>
+    </div>
+
+    <!-- Modal -->
+    <div class="modal fade" id="deleteModal" tabindex="-1" role="dialog" aria-labelledby="deleteModalLabel" aria-hidden="true">
+      <div class="modal-dialog" role="document">
+        <form action="{{ url_for('demo.delete', demo_request_id=demo_request.id) }}" method="post" class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">Are you sure you want to delete this request?</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+              If you proceed, the request will be archived and persisted in the database but no longer be available in the application.
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+            <button type="submit" class="btn btn-danger">Delete</button>
+          </div>
+        </form>
+      </div>
     </div>
 
     <script>
