--- a/corrd/opioid-research/dashboard/app/partials/dashboard.html
+++ b/corrd/opioid-research/dashboard/app/partials/dashboard.html
@@ -1,4 +1,5 @@
 <div class="row-fluid container" style="margin-top:10px; width:98%">
+
     <!-- Rows -->
     <div class="row-fluid kibana-row" ng-controller="RowCtrl" ng-repeat="(row_name, row) in dashboard.current.rows"
          ng-style="row_style(row)">
@@ -6,25 +7,24 @@
             <div class="row-fluid" style="padding:0px;margin:0px;position:relative;">
                 <div class="row-close span12" ng-show="row.collapse" data-placement="bottom">
                     <span class="row-button" bs-modal="'app/partials/roweditor.html'" class="pointer">
-                        <i bs-tooltip="'Configure row'" data-placement="right" ng-show="row.editable" class="icon-cog pointer"></i>
+                        <a href="" title="Configure Row" alt="Configure Row" bs-tooltip="'Configure row'" data-placement="right" ng-show="row.editable" class="nolink small icon-cog pointer"></a>
                     </span>
                     <span class="row-button" ng-click="toggle_row(row)" ng-show="row.collapsable">
-                        <i bs-tooltip="'Expand row'" data-placement="right" ng-show="row.editable" class="icon-expand pointer"></i>
+                        <a alt="Expand row" bs-tooltip="'Expand row'" data-placement="right" ng-show="row.editable" class="nolink small icon-expand pointer" ></a>
                     </span>
                     <span class="row-button row-text" ng-click="toggle_row(row)" ng-class="{'pointer':row.collapsable}">{{row.title || 'Row '+$index}}</span>
                 </div>
                 <div style="text-align:left" class="row-open" ng-show="!row.collapse">
                     <span ng-show="row.collapsable">
-                        <i bs-tooltip="'Hide row'" data-placement="right" class="icon-collapse-top" ng-click="toggle_row(row)"></i>
+                        <a alt="Expand row" href="" bs-tooltip="'Hide row'" data-placement="right"  class="nolink small icon-collapse-top" ng-click="toggle_row(row)"></a>
                         <br>
                     </span>
                     <span bs-modal="'app/partials/roweditor.html'" ng-show="row.editable">
-                        <i bs-tooltip="'Configure row'" data-placement="right" class="icon-cog pointer"></i>
+                        <a href="" title="Configure Row" alt="Configure Row"  bs-tooltip="'Configure row'" data-placement="right" class="nolink small icon-cog pointer"></a>
                         <br>
                     </span>
                     <span ng-show="rowSpan(row) == 12 && row.editable">
-                        <i bs-tooltip="'Row full. Create a new row to add more panels'" data-placement="right"
-                           class="icon-trello"></i>
+                        <a href="" alt='Row Full' bs-tooltip="'Row full. Create a new row to add more panels'" data-placement="right" class="nolink small icon-trello"></a> 
                         <br>
                     </span>
                     <span ng-show="rowSpan(row) > 12">
