--- a/corrd/opioid-research/dashboard/app/partials/dasheditor.html
+++ b/corrd/opioid-research/dashboard/app/partials/dasheditor.html
@@ -23,6 +23,11 @@
                 <label class="small"> Editable </label><input type="checkbox" ng-model="dashboard.current.editable"
                                                               ng-checked="dashboard.current.editable"/>
             </div>
+              <div class="span1">
+                <label class="small"> Home </label><input type="checkbox" ng-model="dashboard.current.home" ng-checked="dashboard.current.home" />
+              </div>
+
+
             <div class="span1">
                 <label class="small"> Hints
                     <tip>Show 'Add panel' hints in empty spaces</tip>
@@ -34,7 +39,7 @@
                                                           ng-options="f for f in ['dark','light']"></select>
             </div>
             <div class="span2">
-                <label class="small">Version</label>Banana v1.6.20
+                <label class="small">Version</label>Banana v1.6.26
             </div>
         </div>
     </div>
